# O-M_Data_Acquisition_Accessability-Validation

./: .dodsrc  .gitignore  AGENTS.md  CONTEXT.md  README.md  generate_report_figures.py  pyproject.toml  requirements.txt
Data/: README.md
analysis/: DATA_ACCESS.md  RESEARCH_QUESTIONS.md  START_HERE.md
configs/: ais_slices.yaml  regions.yaml
docs/: Offshore Wind O&M Data Acquisition Strategy.md  README.md  agent-handoff-metocean-fusion-v2.md  branch-exit-checklist.md  care-wind-farm-confirmation-methodology.md  context-authority-map.md  duckdb-catalog-design.md  event-qa-design.md  governance.md  metocean-acquisition.md  nora3-extraction-plan.md  provenance.md  roadmap.md  stage2-label-taxonomy.md  thesis-methodology.md  vessel-enrichment-plan.md  wind-farm-c-current-state.md
scripts/: agent_gate.sh  assign_bathymetry_to_metocean_points.py  audit_ais_backfill_state.py  audit_pilot.py  audit_spatial_coverage.py  audit_system_storage.py  backfill_ais_slices.py  batch_process_slices.py  build_ais_observability_bias.py  build_current_confidence_v1.py  build_current_scaling_preflight.py  build_evidence_readiness.py  build_fusion_v2_evidence_readiness.py  build_metocean_fusion_v0.py  build_metocean_fusion_v1_source_agreement.py  build_metocean_fusion_v2.py  build_provisional_stage1_hs_tp_surface.py  build_rq01_stage2_workability_sensitivity.py  build_rq9_intervention_intensity.py  build_rq9_turbine_characteristics.py  build_rq9_turbine_exposure.py  build_rq9_turbine_feasibility.py  build_wind_confidence_v1.py  build_wind_farm_c_event_aggregates.py  context_sweep.py  (+23 more)
(+297 files in other folders)
