[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "om_pipeline"
version = "0.1.0"
description = "O&M Data Acquisition & Validation Pipeline"
requires-python = ">=3.8"
dependencies = [
    "requests",
    "pandas",
    "numpy",
    "pyyaml",
]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
